--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-creative-portfolio-starter-code-files",
+  "name": "Portifolio-Next-Fozia",
   "version": "0.1.0",
   "private": true,
   "scripts": {
